--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,17 @@
     }
    ],
    "source": [
-    "def day5():\n",
+    "def make_move(positions, count, start, end):\n",
+    "  if count == 0:\n",
+    "    return\n",
+    "  item = positions[start].popleft()\n",
+    "  positions[end].appendleft(item)\n",
+    "  return make_move(positions, count-1, start, end)\n",
+    "\n",
+    "def read_top(positions):\n",
+    "  return ''.join([positions[i][0] for i in range(len(positions))])\n",
+    "\n",
+    "def day5(make_move):\n",
     "  def parse5():\n",
     "    with open('./data/day5.txt') as f:\n",
     "      lines = f.readlines()\n",
@@ -368,28 +378,51 @@
     "          return positions, lines[n+2:]\n",
     "        if item:\n",
     "          positions[i].append(re.match('\\[([A-Z])\\]', item)[1])\n",
-    "\n",
-    "  def make_move(positions, count, start, end):\n",
-    "    if count == 0:\n",
-    "      return\n",
-    "    item = positions[start].popleft()\n",
-    "    positions[end].appendleft(item)\n",
-    "    return make_move(positions, count-1, start, end)\n",
-    "\n",
-    "  def read_top(positions):\n",
-    "    return ''.join([positions[i][0] for i in range(len(positions))])\n",
-    "\n",
     "  positions, moves = parse5()\n",
-    "\n",
     "  for turn in moves:\n",
     "    result = re.match('move (\\d+) from (\\d) to (\\d)', turn)\n",
-    "    # print(positions, int(result[1]), int(result[2])-1, int(result[3])-1)\n",
     "    make_move(positions, int(result[1]), int(result[2])-1, int(result[3])-1)\n",
-    "\n",
     "  return read_top(positions)\n",
     "\n",
-    "print(day5())"
+    "print(day5(make_move))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CQQBBJFCS\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_move_9001(positions, count, start, end):\n",
+    "  stack = deque()\n",
+    "  for _ in range(count):\n",
+    "    stack.appendleft(positions[start].popleft())\n",
+    "  positions[end].extendleft(stack)\n",
+    "\n",
+    "print(day5(make_move_9001))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
