--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "1262"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,10 +480,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Dir:\n",
+    "  def __init__(self, parent=None):\n",
+    "    self.parent = parent\n",
+    "    self.files = 0\n",
+    "    self.children = {}\n",
+    "\n",
+    "def parse_command(line, cwd, ls, root):\n",
+    "  for item in ls:\n",
+    "    if item.startswith('dir'):\n",
+    "      name = item[4:]\n",
+    "      if not cwd.children.get(name):\n",
+    "        cwd.children[name] = Dir(cwd)\n",
+    "    else:\n",
+    "      cwd.files += int(item.split(' ')[0])\n",
+    "\n",
+    "  if line.startswith('cd'):\n",
+    "    cwd = root if line == 'cd /' else cwd.parent if '..' in line else cwd.children[line.split(' ')[1]]\n",
+    "  return cwd\n",
+    "\n",
+    "def parse7(data):\n",
+    "  root = Dir()\n",
+    "  cwd, ls = root, []\n",
+    "  for line in data:\n",
+    "    if line[0] == '$':\n",
+    "      cwd, ls = parse_command(line[2:], cwd, ls, root), []\n",
+    "    else:\n",
+    "      ls.append(line)\n",
+    "  if ls:\n",
+    "    parse_command('ls', cwd, ls, root)\n",
+    "  return root\n",
+    "\n",
+    "data7 = parse7(data(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_sizes = []\n",
+    "def calculate_total_sizes(root):\n",
+    "  total = root.files\n",
+    "  for child in root.children:\n",
+    "    total += calculate_total_sizes(root.children[child])\n",
+    "  if total <= 100000:\n",
+    "    total_sizes.append(total)\n",
+    "  return total\n",
+    "total = calculate_total_sizes(data7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1206825"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([x for x in total_sizes if x <= 100000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8729145"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = 48729145 - (70000000 - 30000000)\n",
+    "sorted(total_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2594,\n",
+       " 66170,\n",
+       " 34667,\n",
+       " 6682,\n",
+       " 79989,\n",
+       " 61655,\n",
+       " 81164,\n",
+       " 50419,\n",
+       " 84473,\n",
+       " 40790,\n",
+       " 15772,\n",
+       " 48277,\n",
+       " 97133,\n",
+       " 84087,\n",
+       " 64663,\n",
+       " 64663,\n",
+       " 64663,\n",
+       " 52441,\n",
+       " 56965,\n",
+       " 84820,\n",
+       " 64738]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day7_result"
+   ]
   }
  ],
  "metadata": {
