--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,15 +529,14 @@
     "  total = root.files\n",
     "  for child in root.children:\n",
     "    total += calculate_total_sizes(root.children[child])\n",
-    "  if total <= 100000:\n",
-    "    total_sizes.append(total)\n",
+    "  total_sizes.append(total)\n",
     "  return total\n",
     "total = calculate_total_sizes(data7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +545,7 @@
        "1206825"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,64 +556,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8729145"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9608311\n"
+     ]
     }
    ],
    "source": [
     "target = 48729145 - (70000000 - 30000000)\n",
-    "sorted(total_sizes)"
+    "for i in sorted(total_sizes):\n",
+    "  if i >= target:\n",
+    "    break\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2594,\n",
-       " 66170,\n",
-       " 34667,\n",
-       " 6682,\n",
-       " 79989,\n",
-       " 61655,\n",
-       " 81164,\n",
-       " 50419,\n",
-       " 84473,\n",
-       " 40790,\n",
-       " 15772,\n",
-       " 48277,\n",
-       " 97133,\n",
-       " 84087,\n",
-       " 64663,\n",
-       " 64663,\n",
-       " 64663,\n",
-       " 52441,\n",
-       " 56965,\n",
-       " 84820,\n",
-       " 64738]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "day7_result"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
