--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,13 +491,11 @@
     "    self.children = {}\n",
     "\n",
     "def parse_command(line, cwd, ls, root):\n",
-    "  for item in ls:\n",
+    "  for item in ls: # Assumes no repeated ls\n",
     "    if item.startswith('dir'):\n",
-    "      name = item[4:]\n",
-    "      if not cwd.children.get(name):\n",
-    "        cwd.children[name] = Dir(cwd)\n",
+    "      cwd.children[item[4:]] = Dir(cwd)\n",
     "    else:\n",
-    "      cwd.files += int(item.split(' ')[0])\n",
+    "      cwd.files += int(item.split(' ')[0]) \n",
     "\n",
     "  if line.startswith('cd'):\n",
     "    cwd = root if line == 'cd /' else cwd.parent if '..' in line else cwd.children[line.split(' ')[1]]\n",
@@ -515,28 +513,19 @@
     "    parse_command('ls', cwd, ls, root)\n",
     "  return root\n",
     "\n",
-    "data7 = parse7(data(7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_sizes = []\n",
+    "data7 = []\n",
     "def calculate_total_sizes(root):\n",
     "  total = root.files\n",
     "  for child in root.children:\n",
     "    total += calculate_total_sizes(root.children[child])\n",
-    "  total_sizes.append(total)\n",
+    "  data7.append(total)\n",
     "  return total\n",
-    "total = calculate_total_sizes(data7)"
+    "total = calculate_total_sizes(parse7(data(7)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -545,18 +534,18 @@
        "1206825"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum([x for x in total_sizes if x <= 100000])"
+    "sum([x for x in data7 if x <= 100000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -568,8 +557,8 @@
     }
    ],
    "source": [
-    "target = 48729145 - (70000000 - 30000000)\n",
-    "for i in sorted(total_sizes):\n",
+    "target = total - (70000000 - 30000000)\n",
+    "for i in sorted(data7):\n",
     "  if i >= target:\n",
     "    break\n",
     "print(i)"
