--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "from collections import defaultdict, Counter, deque\n",
     "from functools import lru_cache\n",
     "import itertools\n",
-    "from intervaltree import IntervalTree, Interval\n",
     "import json\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,27 +489,25 @@
     "    self.files = 0\n",
     "    self.children = {}\n",
     "\n",
-    "def parse_command(line, cwd, ls, root):\n",
-    "  for item in ls: # Assumes no repeated ls\n",
-    "    if item.startswith('dir'):\n",
-    "      cwd.children[item[4:]] = Dir(cwd)\n",
-    "    else:\n",
-    "      cwd.files += int(item.split(' ')[0]) \n",
+    "def ls(item, cwd):\n",
+    "  if item.startswith('dir'):\n",
+    "    cwd.children[item[4:]] = Dir(cwd)\n",
+    "  else:\n",
+    "    cwd.files += int(item.split(' ')[0]) \n",
     "\n",
-    "  if line.startswith('cd'):\n",
-    "    cwd = root if line == 'cd /' else cwd.parent if '..' in line else cwd.children[line.split(' ')[1]]\n",
+    "def cd(cmd, cwd, root):\n",
+    "  if cmd.startswith('cd'):\n",
+    "    cwd = root if cmd == 'cd /' else cwd.parent if '..' in cmd else cwd.children[cmd.split(' ')[1]]\n",
     "  return cwd\n",
     "\n",
     "def parse7(data):\n",
     "  root = Dir()\n",
-    "  cwd, ls = root, []\n",
+    "  cwd = root\n",
     "  for line in data:\n",
     "    if line[0] == '$':\n",
-    "      cwd, ls = parse_command(line[2:], cwd, ls, root), []\n",
+    "      cwd = cd(line[2:], cwd, root)\n",
     "    else:\n",
-    "      ls.append(line)\n",
-    "  if ls:\n",
-    "    parse_command('ls', cwd, ls, root)\n",
+    "      ls(line, cwd)\n",
     "  return root\n",
     "\n",
     "data7 = []\n",
@@ -525,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +531,7 @@
        "1206825"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,23 +542,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9608311\n"
-     ]
+     "data": {
+      "text/plain": [
+       "9608311"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "target = total - (70000000 - 30000000)\n",
-    "for i in sorted(data7):\n",
-    "  if i >= target:\n",
-    "    break\n",
-    "print(i)"
+    "next(filter(lambda x: x >= target, sorted(data7)))"
    ]
   },
   {
