--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,9 +570,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data8 = np.array(data(8, lambda x: [int(n) for n in x]))\n",
+    "y, x = data8.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maskn, masks = [np.full([1, x], True)[0]], []\n",
+    "for i in range(x-1):\n",
+    "  forward = np.amax(data8[:i+1], 0)\n",
+    "  maskn.append(data8[i+1] > forward)\n",
+    "  backward = np.amax(data8[i+1:], 0)\n",
+    "  masks.append(data8[i] > backward)\n",
+    "masks.append(np.full([1, x], True)[0])\n",
+    "\n",
+    "maskw, maske =  [np.full([y, 1], True)[:, 0]], []\n",
+    "for i in range(y-1):\n",
+    "  forward = np.amax(data8[:, :i+1], 1)\n",
+    "  maskw.append(data8[:, i+1] > forward)\n",
+    "  backward = np.amax(data8[:, i+1:], 1)\n",
+    "  maske.append(data8[:, i] > backward)\n",
+    "maske.append(np.full([y, 1], True)[:, 0])\n",
+    "\n",
+    "mask = np.vstack(maskn) | np.vstack(masks) | np.vstack(maskw).transpose() | np.vstack(maske).transpose()\n",
+    "len(data8[np.where(mask)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1816"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
