--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -570,12 +570,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0, 3, 7, 3],\n",
+       "       [2, 5, 5, 1, 2],\n",
+       "       [6, 5, 3, 3, 2],\n",
+       "       [3, 3, 5, 4, 9],\n",
+       "       [3, 5, 3, 9, 0]])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data8 = np.array(data(8, lambda x: [int(n) for n in x]))\n",
-    "y, x = data8.shape"
+    "y, x = data8.shape\n",
+    "data8"
    ]
   },
   {
@@ -606,21 +622,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1]\n",
+      "[2 2 1 2 1]\n",
+      "[2 2 3 3 3]\n",
+      "[2 3 1 4 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [2., 2., 1., 2., 1.],\n",
+       "       [2., 2., 3., 3., 3.],\n",
+       "       [2., 3., 1., 4., 1.]])"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "north = [np.zeros([1, x])[0]]\n",
+    "for i in range(0, x-1):\n",
+    "  previous = data8[:i+1]\n",
+    "  current = data8[i+1]\n",
+    "  result = np.count_nonzero(previous < current, 0) + 1\n",
+    "  result[result > len(previous)] = len(previous)\n",
+    "  print(result)\n",
+    "  north.append(result)\n",
+    "north = np.vstack(north)\n",
+    "north"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([0., 0., 0., 0., 0.]), array([1, 1, 1, 1, 1]), array([1, 2, 1, 1, 1]), array([1, 2, 3, 1, 2]), array([1, 1, 4, 1, 1])]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 0.],\n",
+       "       [1., 2., 2., 1., 0.],\n",
+       "       [4., 3., 1., 1., 0.],\n",
+       "       [1., 1., 1., 1., 0.],\n",
+       "       [1., 2., 1., 1., 0.]])"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "west = [np.zeros([y, 1])[:, 0]]\n",
+    "for i in range(y-1):\n",
+    "  previous = data8[:, :i+1].transpose()\n",
+    "  current = data8[:, i+1]\n",
+    "  result = np.count_nonzero(previous < current, 0)\n",
+    "  result[result < 1] = 1\n",
+    "  west.append(result)\n",
+    "west = np.vstack(west).transpose()\n",
+    "\n",
+    "east = [np.zeros([y, 1])[:, 0]]\n",
+    "for i in range(y-1):\n",
+    "  previous = data8[:, y-i-1:].transpose()\n",
+    "  current = data8[:, y-i-2]\n",
+    "  result = np.count_nonzero(previous < current, 0)\n",
+    "  result[result < 1] = 1\n",
+    "  east.append(result)\n",
+    "print(east)\n",
+    "east = np.flip(np.vstack(east).transpose(), 1)\n",
+    "east"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1816"
+       "12"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "north = [np.zeros([1, x])[0]]\n",
+    "for i in range(x-1):\n",
+    "  previous = data8[:i+1]\n",
+    "  current = data8[i+1]\n",
+    "  result = np.count_nonzero(previous < current, 0) + 1\n",
+    "  result[result > len(previous)] = len(previous)\n",
+    "  north.append(result)\n",
+    "north = np.vstack(north)\n",
+    "\n",
+    "south = [np.zeros([1, x])[0]]\n",
+    "for i in range(0, x-1):\n",
+    "  previous = data8[x-1-i:]\n",
+    "  current = data8[x-2-i]\n",
+    "  result = np.count_nonzero(previous < current, 0) + 1\n",
+    "  result[result > len(previous)] = len(previous)\n",
+    "  south.append(result)\n",
+    "south = np.flip(np.vstack(south), 0)\n",
+    "\n",
+    "west = [np.zeros([y, 1])[:, 0]]\n",
+    "for i in range(y-1):\n",
+    "  previous = data8[:, :i+1].transpose()\n",
+    "  current = data8[:, i+1]\n",
+    "  result = np.count_nonzero(previous < current, 0) + 1\n",
+    "  result[result > len(previous)] = len(previous)\n",
+    "  west.append(result)\n",
+    "west = np.vstack(west).transpose()\n",
+    "\n",
+    "east = [np.zeros([y, 1])[:, 0]]\n",
+    "for i in range(y-1):\n",
+    "  previous = data8[:, y-i-1:].transpose()\n",
+    "  current = data8[:, y-i-2]\n",
+    "  result = np.count_nonzero(previous < current, 0) + 1\n",
+    "  result[result > len(previous)] = len(previous)\n",
+    "  east.append(result)\n",
+    "east = np.flip(np.vstack(east).transpose(), 1)\n",
+    "\n",
+    "int(np.max(north * south * east * west))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [2., 1., 1., 1., 1.],\n",
+       "        [1., 1., 2., 2., 3.],\n",
+       "        [1., 2., 1., 4., 1.]]),\n",
+       " array([[0., 1., 1., 3., 1.],\n",
+       "        [0., 1., 1., 1., 1.],\n",
+       "        [0., 1., 1., 1., 1.],\n",
+       "        [0., 1., 2., 2., 4.],\n",
+       "        [0., 1., 1., 3., 1.]]),\n",
+       " array([[1., 1., 1., 1., 0.],\n",
+       "        [1., 2., 2., 1., 0.],\n",
+       "        [4., 3., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 0.],\n",
+       "        [1., 2., 1., 1., 0.]]),\n",
+       " array([[1., 1., 1., 3., 3.],\n",
+       "        [1., 1., 2., 1., 1.],\n",
+       "        [2., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [0., 0., 0., 0., 0.]]))"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "north, west, east, south"
+   ]
   }
  ],
  "metadata": {
