--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,10 +661,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data9 = data(9, lambda x: x.split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2350"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9(data, knots=2):\n",
+    "  visited = set()\n",
+    "  state = [(0,0)] * knots\n",
+    "\n",
+    "  def move_head(x, y, direction):\n",
+    "    match direction:\n",
+    "      case 'R':\n",
+    "        x += 1\n",
+    "      case 'L':\n",
+    "        x -= 1\n",
+    "      case 'U':\n",
+    "        y += 1\n",
+    "      case 'D':\n",
+    "        y -= 1\n",
+    "    return (x, y)\n",
+    "\n",
+    "  def move_tail(headx, heady, tailx, taily):\n",
+    "    if abs(headx - tailx) > 1:\n",
+    "      return (headx + (1 if tailx > headx else -1), heady)\n",
+    "    if abs(heady - taily) > 1:\n",
+    "      return (headx, heady + (1 if taily > heady else -1))\n",
+    "    return (tailx, taily)\n",
+    "\n",
+    "  def make_move(current, direction, count):\n",
+    "    for _ in range(count):\n",
+    "      current[0] = move_head(*current[0], direction)\n",
+    "      for i in range(1, len(current)):\n",
+    "        current[i] = move_tail(*current[i-1], *current[i])\n",
+    "      visited.add(current[-1])\n",
+    "    return current\n",
+    "\n",
+    "  for move in data:\n",
+    "    state = make_move(state, move[0], int(move[1]))\n",
+    "    # print(move, state, visited)\n",
+    "\n",
+    "  return len(visited)\n",
+    "\n",
+    "day9(data9, 10)"
+   ]
   }
  ],
  "metadata": {
