--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,16 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2350"
+       "2386"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,6 +702,8 @@
     "    return (x, y)\n",
     "\n",
     "  def move_tail(headx, heady, tailx, taily):\n",
+    "    if abs(headx - tailx) > 1 and abs(heady - taily) > 1:\n",
+    "      return (headx + (1 if tailx > headx else -1), heady + (1 if taily > heady else -1))\n",
     "    if abs(headx - tailx) > 1:\n",
     "      return (headx + (1 if tailx > headx else -1), heady)\n",
     "    if abs(heady - taily) > 1:\n",
@@ -718,12 +720,25 @@
     "\n",
     "  for move in data:\n",
     "    state = make_move(state, move[0], int(move[1]))\n",
-    "    # print(move, state, visited)\n",
     "\n",
     "  return len(visited)\n",
     "\n",
-    "day9(data9, 10)"
+    "print(day9(data9), day9(data9, 10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
