--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,16 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2386"
+       "(6181, 2386)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
     "\n",
     "  return len(visited)\n",
     "\n",
-    "print(day9(data9), day9(data9, 10))"
+    "day9(data9), day9(data9, 10)"
    ]
   },
   {
@@ -735,10 +735,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data10 = data(10, lambda x: x.split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "420\n",
+      "1680\n",
+      "3780\n",
+      "6020\n",
+      "9800\n",
+      "14420\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day10(data):\n",
+    "  q, i, state, op = deque([0]), 0, 1, 0\n",
+    "\n",
+    "  def tock(i, state, op):\n",
+    "    if not op:\n",
+    "      if q:\n",
+    "        op = q.popleft()\n",
+    "    else:\n",
+    "      state += op\n",
+    "      op = 0\n",
+    "    i += 1\n",
+    "    return i, state, op\n",
+    "\n",
+    "  for command in data:\n",
+    "    q.append(0 if len(command) == 1 else int(command[1]))\n",
+    "    i, state, op = tock(i, state, op)\n",
+    "    yield state\n",
+    "  while q:\n",
+    "    i, state, op = tock(i, state, op)\n",
+    "    yield state\n",
+    "  i, state, op = tock(i, state, op)\n",
+    "  yield state\n",
+    "\n",
+    "signal = 0\n",
+    "targets = [20, 60, 100, 140, 180, 220]\n",
+    "for i, v in enumerate(day10(data10)):\n",
+    "  if i+1 in targets:\n",
+    "    signal += (i+1) * v\n",
+    "    print(signal)"
+   ]
   }
  ],
  "metadata": {
