--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -744,20 +744,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "420\n",
-      "1680\n",
-      "3780\n",
-      "6020\n",
-      "9800\n",
-      "14420\n"
-     ]
+     "data": {
+      "text/plain": [
+       "14420"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -789,8 +787,55 @@
     "for i, v in enumerate(day10(data10)):\n",
     "  if i+1 in targets:\n",
     "    signal += (i+1) * v\n",
-    "    print(signal)"
+    "signal"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###   ##  #    ###  ###  ####  ##  #  # \n",
+      "#  # #  # #    #  # #  #    # #  # #  ##\n",
+      "#  # #    #    #  # ###    #  #  # #  # \n",
+      "###  # ## #    ###  #  #  #   #### #  ##\n",
+      "# #  #  # #    # #  #  # #    #  # #  ##\n",
+      "#  #  ### #### #  # ###  #### #  #  ##  \n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "image = ''\n",
+    "for i, v in enumerate(day10(data10)):\n",
+    "  position, sprite = i+1, v\n",
+    "  if position%40 in range(sprite, sprite+3):\n",
+    "    image += '#'\n",
+    "  else:\n",
+    "    image += ' '\n",
+    "  if not position%40:\n",
+    "    image += '\\n'\n",
+    "print(image)\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
