--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -735,31 +735,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data10 = data(10, lambda x: x.split(' '))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14420"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day10(data):\n",
+    "def parse10(data):\n",
     "  q, i, state, op = deque([0]), 0, 1, 0\n",
     "\n",
     "  def tock(i, state, op):\n",
@@ -782,17 +762,39 @@
     "  i, state, op = tock(i, state, op)\n",
     "  yield state\n",
     "\n",
-    "signal = 0\n",
-    "targets = [20, 60, 100, 140, 180, 220]\n",
-    "for i, v in enumerate(day10(data10)):\n",
-    "  if i+1 in targets:\n",
-    "    signal += (i+1) * v\n",
-    "signal"
+    "data10 = lambda: parse10((data(10, lambda x: x.split(' '))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14420"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10_1(data):\n",
+    "  signal = 0\n",
+    "  targets = [20, 60, 100, 140, 180, 220]\n",
+    "  for i, v in enumerate(data):\n",
+    "    if i+1 in targets:\n",
+    "      signal += (i+1) * v\n",
+    "  return signal\n",
+    "day10_1(data10())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -810,17 +812,18 @@
     }
    ],
    "source": [
-    "image = ''\n",
-    "for i, v in enumerate(day10(data10)):\n",
-    "  position, sprite = i+1, v\n",
-    "  if position%40 in range(sprite, sprite+3):\n",
-    "    image += '#'\n",
-    "  else:\n",
-    "    image += ' '\n",
-    "  if not position%40:\n",
-    "    image += '\\n'\n",
-    "print(image)\n",
-    "  "
+    "def day10_2(data):\n",
+    "  image = ''\n",
+    "  for i, v in enumerate(data):\n",
+    "    position, sprite = i+1, v\n",
+    "    if position%40 in range(sprite, sprite+3):\n",
+    "      image += '#'\n",
+    "    else:\n",
+    "      image += ' '\n",
+    "    if not position%40:\n",
+    "      image += '\\n'\n",
+    "  return image\n",
+    "print(day10_2(data10()))"
    ]
   },
   {
